# scanner

./: .env  README.md  firebase.json  main.py  pyproject.toml
app/: __init__.py  config.py
app/api/errors/: validation_error.py
app/api/routes/: data_scanner.py  router.py
app/core/: config.py
app/db/: conn.py
